2003-02-17  Bastien Nocera  <hadess@hadess.net>

	* modules/ssh-method.c: (do_read_directory): implement mime-type
	checking for symlinks, still doesn't work for directories

2003-02-17  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modules/file-method.c: (read_link): fix memleak when readlink
	fails.
	* test/.cvsignore : quiet CVS, quiet.

2003-02-13  Bastien Nocera  <hadess@hadess.net>

	* modules/ssh-method.c: (do_move), (do_unlink), (do_check_same_fs):
	implement do_move and revive do_check_same_fs

2003-02-13  Bastien Nocera  <hadess@hadess.net>

	* modules/ssh-method.c: (ssh_connect), (do_open_directory): don't crash
	when accessing ssh://, nicer error message when we get a connection
	refused

2003-02-13  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* modules/ssh-method.c: (ssh_connect), (ssh_destroy),
	(ssh_check_for_done), (do_read), (do_read_directory):
	add more robust error checking, check for EOF and EOD when we're done
	reading rather than on close

==== gnome-vfs 2.2.2 ====
	
2003-02-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in: 
	Bump to 2.2.2
	
2003-02-12  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-ops.c (gnome_vfs_monitor_add):
	Free uri if no monitor_add implementation. Plugs leak.

	* libgnomevfs/gnome-vfs-monitor.c (_gnome_vfs_monitor_do_cancel):
	Correctly destroy the handle of result == OK. Plugs leak.

2003-02-12  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Alexander Larsson  <alexl@redhat.com>

	* modules/Makefile.am:
	* modules/ssh-method.c: (ssh_connect), (ssh_read_error),
	(ssh_wait_and_destroy), (do_open), (do_close), (do_read),
	(do_make_directory), (do_remove_directory), (do_unlink),
	(do_check_same_fs), (do_set_file_info): give a login failed error when
	no key is setup to access the machine, a server not available when the
	machine doesn't have its keys in the known_hosts, use port information